--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ search: true
 baseurl: ""
 url: "https://club-code.github.io"
 
-minimal_mistakes_skin: dark
+minimal_mistakes_skin: air
 
 # Build settings
 markdown: kramdown
