--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@
 title: Aurélieng
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  The Club Code is a club from Télécom SudParis & IMT-Business School schools where people share their passion for programming. 
+  Bonjour
 github_username: club-code
-logo: /assets/images/196x196.png
+logo: /assets/images/logo_saturne.png
 search: true
 
 baseurl: ""
-url: "https://club-code.github.io"
+url: "https://aure00.github.io"
 
 minimal_mistakes_skin: air
 
