--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Aurélieng
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   Bonjour
-github_username: club-code
+github_username: aure00
 logo: /assets/images/logo_saturne.png
 search: true
 
